# noise-generator

./: .gitignore  CMakeLists.txt  README.md  noisegen.jucer  package-lock.json
Source/: Main.cpp
Source/Core/: BrownNoise.cpp  BrownNoise.h  NoiseGenerator.h  NoiseRunner.cpp  NoiseRunner.h  PinkNoise.cpp  PinkNoise.h  SimplePinkNoise.cpp  SimplePinkNoise.h  SpectrogramMessage.cpp  SpectrogramMessage.h  WhiteNoise.cpp  WhiteNoise.h
Source/Runs/: RunBrownNoise.cpp  RunPinkNoise.cpp  RunWhiteNoise.cpp
